SUITE-697: Fix spacing from px to rem

--- a/src/Pyz/Yves/CartPage/Theme/default/components/molecules/cart-item-summary/cart-item-summary.scss
+++ b/src/Pyz/Yves/CartPage/Theme/default/components/molecules/cart-item-summary/cart-item-summary.scss
@@ -4,7 +4,7 @@
         margin: 0;
 
         @include helper-breakpoint-media-min($lg-min) {
-            width: calc(100% - #{rem(144, number)});
+            width: calc(100% - #{rem(144)});
             padding-top: rem(20);
         }
 
