--- a/src/Pyz/Yves/CartPage/Theme/default/components/molecules/cart-item/cart-item.scss
+++ b/src/Pyz/Yves/CartPage/Theme/default/components/molecules/cart-item/cart-item.scss
@@ -12,7 +12,7 @@
 
         &__content {
             padding: 0 0 rem(5) rem(24);
-            width: calc(100% - #{rem(120, number)});
+            width: calc(100% - #{rem(120)});
         }
 
         &__image {
