--- a/src/Pyz/Yves/CartPage/Theme/default/templates/page-layout-cart/page-layout-cart.scss
+++ b/src/Pyz/Yves/CartPage/Theme/default/templates/page-layout-cart/page-layout-cart.scss
@@ -17,14 +17,14 @@
 
         &--content {
             @include helper-breakpoint-media-min($lg-min) {
-                padding-right: 100px;
+                padding-right: rem(100);
                 border-right: rem(1) dotted $setting-color-lightest;
             }
         }
 
         &--sidebar {
             @include helper-breakpoint-media-min($lg-min) {
-                padding-left: 20px;
+                padding-left: rem(20);
             }
         }
     }
