--- a/src/Pyz/Yves/DiscountPromotionWidget/Theme/default/components/molecules/promotion-item/promotion-item.scss
+++ b/src/Pyz/Yves/DiscountPromotionWidget/Theme/default/components/molecules/promotion-item/promotion-item.scss
@@ -35,7 +35,7 @@
         &__content {
             padding-left: rem(24);
             position: relative;
-            width: calc(100% - #{rem(120, number)});
+            width: calc(100% - #{rem(120)});
         }
 
         &--stretch {
